--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div class="owl-carousel owl-theme">
           <div class="item">
-            <a href="#" class="text-decoration-none">
+            <a href="https://github.com/Raybrilliant/ikost_project" class="text-decoration-none">
               <div class="card">
                 <img src="img/iKost.gif" class="card-img-top" alt="missing-img">
                 <div class="card-body">
@@ -184,9 +184,64 @@
                   <p class="card-text">The client wants to make a landing page for her UI/UX assignment, the web design is from her and i just slicing the desingn to html and hosting it in her github account. This landing page is about a educational scholarships</p>
                   <p class="fw-semibold">How to do it</p>
                   <ul>
-                    <li>Slicing web design using a bootstrap css framework by NPM</li>
+                    <li>Slicing web design using a bootstrap css framework using NPM</li>
                     <li>Make it a responsive website</li>
                     <li>Hosting it on her github account</li>
+                  </ul>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="item">
+            <a href="https://github.com/Raybrilliant/Web-Sinongki" class="text-decoration-none">
+              <div class="card">
+                <img src="img/sinongki.gif" class="card-img-top" alt="missing-img">
+                <div class="card-body">
+                  <h5>Si Nongki</h5>
+                  <p class="card-text">This is final project of an integrative programming subject, i developed this project with 5 friends who have personal job for each person. There are an UI/UX Designers, Mobile developers, API developers, and i'm a Web Developer. On my duty i have a responsibility to develop website using various frameworks</p>
+                  <p class="fw-semibold">How to do it</p>
+                  <ul>
+                    <li>Slicing web design using a bootstrap css framework</li>
+                    <li>Make it a responsive website</li>
+                    <li>Using AJAX method by JQuery to connect RestAPI</li>
+                    <li>Completing a web apps using the laravel framework</li>
+                  </ul>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#" class="text-decoration-none">
+              <div class="card">
+                <img src="img/erudite.gif" class="card-img-top" alt="missing-img">
+                <div class="card-body">
+                  <h5>Gabutverse</h5>
+                  <p class="card-text">The clients wants to make a web apps for streaming movies, the web must can automaticly get a detail of movies using a movies ID from IMDB. the overview page must show all details of movies</p>
+                  <p class="fw-semibold">How to do it</p>
+                  <ul>
+                    <li>Creating a web design</li>
+                    <li>Slicing web design using a bootstrap css framework using NPM</li>
+                    <li>Make it a responsive website</li>
+                    <li>Using AJAX method by JQuery to connect TMDB RestAPI</li>
+                    <li>Completing a web apps using the laravel framework</li>
+                  </ul>
+                </div>
+              </div>
+            </a>
+          </div>
+          <div class="item">
+            <a href="https://shorturl.at/cGKNZ" class="text-decoration-none">
+              <div class="card">
+                <img src="img/e-thrift.gif" class="card-img-top" alt="missing-img">
+                <div class="card-body">
+                  <h5>E-Thrift</h5>
+                  <p class="card-text">The clients wants to make a used fashion goods e-commerce prototype, the app concept is common e-commerce such as bukalapak, tokopedia, etc. But there is a unique feture called a nego feature</p>
+                  <p class="fw-semibold">How to do it</p>
+                  <ul>
+                    <li>Brainstroming about layout and app concept</li>
+                    <li>Creating UI/UX design</li>
+                    <li>Prototyping design that has been made using figma</li>
+                    <li>Make branding video for e-thrift prototype</li>
                   </ul>
                 </div>
               </div>
