--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
             </a>
           </div>
           <div class="item">
-            <a href="#" class="text-decoration-none">
+            <a href="https://github.com/Raybrilliant/gabutverse_project" class="text-decoration-none">
               <div class="card">
-                <img src="img/erudite.gif" class="card-img-top" alt="missing-img">
+                <img src="img/gabutverse.gif" class="card-img-top" alt="missing-img">
                 <div class="card-body">
                   <h5>Gabutverse</h5>
                   <p class="card-text">The clients wants to make a web apps for streaming movies, the web must can automaticly get a detail of movies using a movies ID from IMDB. the overview page must show all details of movies</p>
